--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
   </head>
   <body>
     <main id="container">
-    <div class="dir" id="top" onclick="up()">top</div>
-    <div id="left" class="dir" onclick="left()">left</div>
-    <div id="right" class="dir" onclick="right()">right</div>
-    <div id="bottom" class="dir" onclick="down()">bottom</div>
+    <div class="dir" id="top" onclick="upy()">top</div>
+    <div id="left" class="dir" onclick="lefty()">left</div>
+    <div id="right" class="dir" onclick="righty()">right</div>
+    <div id="bottom" class="dir" onclick="downy()">bottom</div>
 <ul id="kyub" class="qube cube13">
-  <li id="front">1</li>
-  <li id="left">2</li>
-  <li id="back">3</li>
-  <li id="right">4</li>
-  <li id="top">5</li>
-  <li id="bottom">6</li>
+  <li id="f">1</li>
+  <li id="l">2</li>
+  <li id="b">3</li>
+  <li id="r">4</li>
+  <li id="t">5</li>
+  <li id="d">6</li>
 </ul>
 </main>
 <script src="main.js"></<script>
