--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="right" class="dir" onclick="righty()">right</div>
     <div id="bottom" class="dir" onclick="downy()">bottom</div>
 <ul id="kyub" class="qube cube13">
-  <li id="f">1</li>
+  <li id="f"><span>1</span></li>
   <li id="l">2</li>
   <li id="b">3</li>
   <li id="r">4</li>
@@ -20,7 +20,7 @@
   <li id="d">6</li>
 </ul>
 </main>
-<script src="main.js"></<script>
+<script src="main.js"></script>
 
 </script>
 </<body>
