--- a/index.html
+++ b/index.html
@@ -6,21 +6,25 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <main id="container">
-    <div class="dir" id="top" onclick="upy()">top</div>
-    <div id="left" class="dir" onclick="lefty()">left</div>
-    <div id="right" class="dir" onclick="righty()">right</div>
-    <div id="bottom" class="dir" onclick="downy()">bottom</div>
-<ul id="kyub" class="qube cube13">
-  <li id="f">1</li>
-  <li id="l">2</li>
-  <li id="b">3</li>
-  <li id="r">4</li>
-  <li id="t">5</li>
-  <li id="d">6</li>
-</ul>
+
+<div class="wrapper">
+  <div class="cube">
+    <b class="front">front</b>
+    <b class="back">back</b>
+    <b class="top">top</b>
+    <b class="bottom">bottom</b>
+    <b class="left">left</b>
+    <b class="right">right</b>
+    <i class="front"></i>
+    <i class="back"></i>
+    <i class="top"></i>
+    <i class="bottom"></i>
+    <i class="left"></i>
+    <i class="right"></i>
+  </div>
+</div>
 </main>
-<script src="main.js"></<script>
+<script src="main.js"></script>
 
 </script>
 </<body>
