--- a/index.html
+++ b/index.html
@@ -1,27 +1,32 @@
-<<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <main id="container">
-    <div class="dir" id="top" onclick="upy()">top</div>
-    <div id="left" class="dir" onclick="lefty()">left</div>
-    <div id="right" class="dir" onclick="righty()">right</div>
-    <div id="bottom" class="dir" onclick="downy()">bottom</div>
-<ul id="kyub" class="qube cube13">
-  <li id="f">1</li>
-  <li id="l">2</li>
-  <li id="b">3</li>
-  <li id="r">4</li>
-  <li id="t">5</li>
-  <li id="d">6</li>
-</ul>
-</main>
-<script src="main.js"></<script>
+<!DOCTYPE html>
+<html lang="en">
 
-</script>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Quest Cube</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <div class="cube-container">
+        <div id="top">top</div>
+
+        <div id="bottom">bott</div>
+        <div id="left">lrft</div>
+        <div id="right">tighyt</div>
+
+
+        <div class="cube">
+            <div id="f" class="cube-side"></div>
+            <div id="l" class="cube-side"></div>
+            <div id="r" class="cube-side"></div>
+            <div id="t" class="cube-side"></div>
+            <div id="d" class="cube-side"></div>
+            <div id="b" class="cube-side"></div>
+        </div>
+    </div>
+<script src="main.js"></script>
 </<body>
   </html>
